fixes on the input, parseInt fixed error on the coversion helper function for km

--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,18 @@
   }
 }
 
+.switchButton {
+  width: 80px;
+}
 
+.mainArea {
+  height: 60vh;
+}
+
+.capitalise {
+  text-transform: capitalize;
+}
+
+.userInputForm {
+  font-size: 1.5em;
+}
